Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-05-08 Kimmo
 PATCH: [ 1483344 ] Fix creating private file filters
  Src: FileFiltersDlg.cpp

2006-05-07 Kimmo
 PATCH: [ 1483107 ] Remove dublicated code from folder compare progress dlg
  Src: DirCompProgressDlg.cpp DirCompProgressDlg.h
 PATCH: [ 1483088 ] Add GUI for user to select filter folder
  Src: FileFilterHelper.cpp FileFilterHelper.h FileFiltersDlg.cpp MainFrm.cpp Merge.rc
   OptionsDef.h OptionsInit.cpp paths.cpp paths.h PropRegistry.cpp PropRegistry.h
   resource.h
  Src/Languages/*: Merge*.rc

2006-05-06 Tim
 BUG: [ 1481053 ] Options: Text Colors should use 3D-Look too
  Src: Merge.rc
  Src/Languages/*: Merge*.rc
 PATCH: [ 1482352 ] Icons for 'Bookmarks' feature
  Src: MainFrm.cpp Merge.rc resource.h
  Src/res new files: clear_bookmarks.bmp next_bookmark.bmp prev_bookmark.bmp
   toggle_bookmark.bmp
  Src/Languages/*: Merge*.rc

2006-05-06 Kimmo
 BUG: [ 1363364 ] DisplayBinaryFiles extension list wrong
  Also bump version of plugin to 1.0.3.0
  Plugins/src_VCPP/DisplayBinaryFiles: ChangeLog.txt DisplayBinaryFiles.rc WinMergeScript.cpp
  Plugins/dlls: DisplayBinaryFiles.dll

2006-05-06 Tim
 PATCH: [ 1482411 ] Add line before 'Open Project' in main menu
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-05-06 Kimmo
 PATCH: [ 1482688 ] sgml.cpp contains "lt" twice
  Src/editlib: sgml.cpp
 PATCH: [ 1482694 ] xml.cpp contains "lt" twice
  Src/editlib: xml.cpp
 PATCH: [ 1482765 ] Fix closing folder compare progress dialog
  Src: DirCompProgressDlg.cpp DirCompProgressDlg.h DirView.cpp

2006-05-04 WinMerge experimental release 2.5.3.7 (cvs)

2005-05-04 Kimmo
 PATCH: [ 1481213 ] Fix foldercompare short-size suffixes and localize them
  Src: DirViewColItems.cpp Merge.rc resource.h
  Src/Languages/*: Merge*.rc
 PATCH: [ 1481391 ] Make LocationView update from MergeView more safe
  Src: LocationView.cpp MergeEditView.cpp MergeEditView.h